# prism

./: .gitignore  CLAUDE.md  Cargo.toml  SESSION_PROMPTS.md
crates/prism-audit/: Cargo.toml
crates/prism-audit/src/: complexity.rs  discovery.rs  lib.rs  metrics.rs  source_file.rs  types.rs
crates/prism-check/: Cargo.toml
crates/prism-check/src/: checks.rs  config.rs  lib.rs  types.rs
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: main.rs
crates/prism-cli/tests/: audit_integration.rs  check_integration.rs  deps_integration.rs  map_integration.rs  stats_integration.rs
crates/prism-cli/tests/fixtures/deps_project/: Cargo.toml
crates/prism-cli/tests/fixtures/map_project/: Cargo.toml
crates/prism-cli/tests/fixtures/map_project/crates/alpha/: Cargo.toml
crates/prism-cli/tests/fixtures/map_project/crates/alpha/src/: analysis.rs  lib.rs  types.rs
crates/prism-cli/tests/fixtures/map_project/crates/beta/src/: lib.rs
crates/prism-cli/tests/fixtures/map_project/crates/beta/src/utils/: mod.rs
crates/prism-cli/tests/fixtures/sample_project/api/: endpoints.rs
crates/prism-cli/tests/fixtures/sample_project/src/: lib.rs
crates/prism-cli/tests/fixtures/sample_project/src/utils/: helpers.rs  mod.rs
crates/prism-deps/: Cargo.toml
crates/prism-deps/src/: graph.rs  lib.rs  registry.rs  types.rs  vulnerability.rs
crates/prism-map/: Cargo.toml
crates/prism-map/proptest-regressions/: types.txt
crates/prism-map/src/: analysis.rs  lib.rs  types.rs
crates/prism-stats/: Cargo.toml
crates/prism-stats/src/: code.rs  complexity.rs  deps.rs  docs.rs  lib.rs  safety.rs  surface.rs  tests_count.rs  types.rs
crates/prism-stats/tests/: collect_stats_test.rs
crates/prism-stats/tests/fixtures/simple_crate/: Cargo.toml
crates/prism-stats/tests/fixtures/simple_crate/src/: lib.rs
