[workspace]
members = [
    "crates/prism-cli",
    "crates/prism-audit",
    "crates/prism-deps",
    "crates/prism-stats",
]
resolver = "2"
exclude = [
    "crates/prism-cli/tests/fixtures/deps_project",
    "crates/prism-stats/tests/fixtures/simple_crate",
]

[workspace.dependencies]
prism-audit = { path = "crates/prism-audit" }
prism-deps = { path = "crates/prism-deps" }
prism-stats = { path = "crates/prism-stats" }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.19"
semver = "1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"