[package]
name = "prism-check"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-audit = { workspace = true }
prism-deps = { workspace = true }
prism-stats = { workspace = true }
prism-map = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
proptest = "1"
