[package]
name = "prism-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-audit = { workspace = true }
prism-deps = { workspace = true }
prism-stats = { workspace = true }
prism-map = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
