[package]
name = "prism-deps"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
cargo_metadata = { workspace = true }
semver = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
