[package]
name = "prism-map"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
cargo_metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2", features = ["full", "parsing"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
proptest = "1"
